Frequentist Inference Case Study - Part B

--- a/Frequentist Inference Case Study - Part B (2).ipynb
+++ b/Frequentist Inference Case Study - Part B (2).ipynb
@@ -66,21 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import t\n",
+    "from scipy.stats import ttest_ind_from_stats\n",
     "from numpy.random import seed\n",
     "medical = pd.read_csv(r\"C:\\Users\\Thanh Nguyen\\Desktop\\Flash download\\11.1\\1585247986_Frequentist_Case_Study\\Frequentist Case Study\\insurance2.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "(1338, 8)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4   32    1  28.880         0       0       1   3866.85520               1"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,12 +223,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "A:\n",
+    "Mean = 13270.422265\n",
+    "\n",
+    "Standard Deviation = 12110.011237"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A: the most approriate we can do it try to see where the 12,000 charge fall into"
    ]
   },
   {
@@ -300,47 +303,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A: The confidence interval is 12723.43  to 13817.41 so administrator should not be worry"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.64600271507645\n"
+      "1.6459941145571317\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "critical_val = t.ppf(0.95, 1327)\n",
+    "critical_val = t.ppf(0.95, 1337)\n",
     "print(critical_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "margin = critical_val*std_charges/np.sqrt(1327)"
+    "margin = critical_val*std_charges/np.sqrt(1337)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The confidence interval is $12723.43 to $13817.41\n"
+      "The confidence interval is $12725.49 to $13815.36\n"
      ]
     }
    ],
@@ -397,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -434,20 +437,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pooled standard deviation is: 392555.04544782825\n",
-      "The t-test statistic is: 0.3490242043588775\n"
+      "Pooled standard deviation is: 11512.282899205744\n",
+      "The t-test statistic is: 11.901306943555385\n"
      ]
     }
    ],
    "source": [
-    "st_pooled = np.sqrt((((n_in-1) * (st_in**2)) + ((n_unin-1) * (st_unin**2))/(n_in + n_unin - 2)))\n",
+    "st_pooled = np.sqrt((((n_in-1) * (st_in**2)) + ((n_unin-1) * (st_unin**2)))/(n_in + n_unin - 2))\n",
     "\n",
     "test_stat = (m_in - m_unin)/(st_pooled * np.sqrt((1/n_in) + (1/n_unin)))\n",
     "\n",
@@ -457,10 +460,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=11.901306943555387, pvalue=4.090550214373679e-31)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ttest_ind_from_stats(mean1 = m_in, std1=st_in, nobs1=n_in,\n",
+    "                    mean2=m_unin, std2=st_unin, nobs2=n_unin)"
+   ]
   },
   {
    "cell_type": "code",
@@ -487,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A:I don't think it is an equivalent one from a sample."
    ]
   },
   {
